<resources>
    <string name="app_name" translatable="false">Try145</string>
    <string name="hello">Hello!!!</string>
    <string name="click">Enter</string>
    <string name="fab_content_desc">Add</string>
    <string name="login_name">Name</string>
    <string name="login_password">Password</string>
    <string name="back">Back</string>
    <string name="wrong_password">Wrong password</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>